Fix potential crash setting new configs

If we get a setConfigOperation with entirely disabled outputs we would
not have a valid primary screen. At this point we would call
setPrimaryOutput with a null pointer.

BUG: 464590


(cherry picked from commit 8a436ad524cd961bf9e367d83b5872af77645d9c)